--- a/app/css/style.css
+++ b/app/css/style.css
@@ -54,3 +54,38 @@ a {
 .meal input {
     margin-bottom: 1rem;
 }
+
+.meal button {
+    margin-bottom: 1rem;
+}
+
+
+/*Animations*/
+
+.animate-view.ng-enter,
+.animate-view.ng-leave {
+    transition: 0.75s linear all;
+    position: relative;
+}
+
+.animate-view.ng-enter {
+    opacity: 0;
+    margin-bottom: 20rem;
+    z-index: 100;
+}
+
+.animate-view.ng-enter.ng-enter-active {
+    opacity: 1;
+    margin-bottom: 0rem;
+}
+
+.animate-view.ng-leave {
+    opacity: 1;
+    z-index: 99;
+    margin-bottom: 0rem;
+}
+
+.animate-view.ng-leave.ng-leave-active {
+    opacity: 0;
+    margin-bottom: -20rem;
+}
